--- a/main.css
+++ b/main.css
@@ -1,73 +1,80 @@
 /* Global styles */
 * {
-    font-family: Merienda One;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Merienda One;
+  box-sizing: border-box;
 }
+
+
 
 /* Body styles */
-body {
-	margin: 0;
-	padding: 0;
-	text-align: center;
-	background-image: url(dark-mosaic.png);
+body, html {
+  background-image: linear-gradient(to right, #092148 0%, #5bb981 51%, #0f5ee1 100%);
+  background-size: cover;
+  height: 100%;
+  text-align: center;
+  transition: 0.5s all linear;
+  overflow-x: hidden;
 }
 
+.container{
+  display: flex;
+  position: relative;
+  padding: 20px 0;
+}
 /* Main heading style */
 h1  {
-    font-family: Monoton;
-    font-size: 5.9em;
-    margin: 0;
-    text-transform: capitalize;
-    background: #2196f3;
-    background-image: url(dark-mosaic.png);
+  font-family: Monoton;
+  font-size: 5.9em;
+  text-transform: capitalize;
+  background-image: linear-gradient(to right, #092148 0%, #5bb981 51%, #0f5ee1 100%);
+
 }
 
-/* divs that containnig the groups */
-div {
-	width: 50%;
-	padding: 1em;
+
+.num-group, .color {
+  padding: 100px 30px 100px 10px;
+  clip-path: polygon(100% 0, 86% 100%, 0 100%, 0 0);
+  width: 50%;
+  background: #0a2249;
+  position: relative;
 }
 
-/* labels for the input feilds */
-label {
-	display: block;
-}
 
-/* div who containing the input type number */
-.num-group {
-	background: linear-gradient(to bottom, #3888c7,#c35252,#c1c113,#ffbc00,#5283a9,#fbff00,#ff0000);
-}
-
-/* div who containing the input type color */
 .color {
-	background: linear-gradient(to bottom, #ef2626,orange,yellow,#40d024,#5c5cca,#b465f1,#ce6fce);
+  right: 0;
+  background: #1464db;
 }
 
-h2 {
-	margin: 0;
-	padding: 1em;
+.color, .rotat-fix {
+  transform: rotate(180deg);
 }
+
+h2{
+  margin: 1em;
+  text-transform: capitalize;
+}
+
 
 /* input feilds type number styles */
 input[type=number] {
-	outline: none;
-	border: 1px solid #ccc;
-	font-size: 1em;
-	background: transparent;
+
 }
+
 
 /* submit button styles */
 .btn {
-    padding: 30px;
-    border: none;
-    outline: none;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto ;
-    color: white;
-    border-radius: 10px;
-    background-image: linear-gradient(to right, #092148 0%, #5bb981 51%, #0f5ee1 100%);
+  padding: 30px;
+  border: none;
+  outline: none;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto ;
+  color: white;
+  border-radius: 10px;
+  background-image: linear-gradient(to right, #092148 0%, #5bb981 51%, #0f5ee1 100%);
 }
 
 /* submit button hover style */
@@ -75,38 +82,30 @@ input[type=number] {
   background-position: right center;
 }
 
-/* div who containing the table */
-.grid {
-    position: absolute;
-	top: 9.4em;
-    right: 0;
-}
-
-/* list of instractions styles */
-ol {
-	margin: 0;
-	background: #ffff00ad;
-	padding: 1em 2em;
-	text-transform: capitalize;
-}
-
 /* table elements styles */
+
+.button-group,
+.grid h2,
+span {
+  padding: 0 4em 0 0;;
+}
+
 table,
 tr,
 td  {
-    border: 1px solid #0000004d;
-    background: #ffffff5c
+  border: 1px solid #0000004d;
+  background: #ffffff5c
 }
 
 table  {
-    border-collapse: collapse;
-    margin: 0 auto;
+  border-collapse: collapse;
+  margin: 0 auto;
 }
 
 tr  {
-    height: 20px;
+  height: 20px;
 }
 
 td  {
-    width: 20px;
+  width: 20px;
 }
